# ai.rs

./: Cargo.toml
ailib/: Cargo.toml
ailib/src/: deterministic_state.rs  lib.rs  state.rs  strategy.rs  winner.rs
ailib/src/strategies/: full_search_strategy.rs  mod.rs  random_strategy.rs
tictactoe/: Cargo.toml
tictactoe-console/: Cargo.toml
tictactoe-console/src/: main.rs
tictactoe/src/: lib.rs
