[package]
name = "tictactoe-console"
version = "0.1.0"
authors = ["tobi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tictactoe = { package = "tictactoe", path = "../tictactoe" }
ailib = { package = "ailib", path = "../ailib" }
